--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "vite": "^2.3.3"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "three": "^0.128.0"
   }
 }
