--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^2.3.3"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "serve-static": "^1.14.1",
     "three": "^0.128.0"
   }
 }
