--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^2.3.3"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "three": "^0.128.0"
   }
 }
